Fri Mar 18 16:01:00 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DataLib.gmfgen:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.gmfgen:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/PolicyLib.gmfgen:

	  Change diagram editor ID to be what was the default value when using
	  the package name prefix org.opendds.modeling.model.opendds.diagram.<lib>.
	  This will allow existing model diagrams to open without error.

        * tools/modeling/plugins/org.opendds.modeling.diagram.datalib/src/org/opendds/modeling/diagram/datalib/part/OpenDDSDataLibDiagramEditor.java:
        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/src/org/opendds/modeling/diagram/dcpslib/part/OpenDDSDcpsLibDiagramEditor.java:
        * tools/modeling/plugins/org.opendds.modeling.diagram.policylib/src/org/opendds/modeling/diagram/policylib/part/OpenDDSPolicyLibDiagramEditor.java:

	  Auto-generated update based on diagram editor ID change.

Fri Mar 18 14:47:45 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * configure:

          Fixed a bug with default.features.  Put "extra" DDS features in the
          default.features instead of passing them on the command line with
          -features.  The old way was too hard to use, the user would have to
          remember to run MPC with a similar command line.

Fri Mar 18 13:45:49 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.diagram.datalib/src/org/opendds/modeling/diagram/datalib:
        * tools/modeling/plugins/org.opendds.modeling.diagram.datalib/src/org/opendds/modeling/diagram/datalib/edit:
        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/src/org/opendds/modeling/diagram/dcpslib:
        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/src/org/opendds/modeling/diagram/dcpslib/edit: