@@ -1,18 +1,26 @@
+Fri Mar 18 17:57:29 UTC 2011  Byron Harris  <harrisb@ociweb.com>
+
+        * tools/modeling/plugins/org.opendds.modeling.common/src/org/opendds/modeling/common/gmf/ElementCommentPropertySection.java:
+
+          Copied EFactory used for Comment creation used in 1st version of this file
+          into this version so comments will persist after the comment field looses
+          focus.
+
 Fri Mar 18 16:01:00 UTC 2011  Byron Harris  <harrisb@ociweb.com>
 
         * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DataLib.gmfgen:
         * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.gmfgen:
         * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/PolicyLib.gmfgen:
 
-	  Change diagram editor ID to be what was the default value when using
-	  the package name prefix org.opendds.modeling.model.opendds.diagram.<lib>.
-	  This will allow existing model diagrams to open without error.
+          Change diagram editor ID to be what was the default value when using
+          the package name prefix org.opendds.modeling.model.opendds.diagram.<lib>.
+          This will allow existing model diagrams to open without error.
 
         * tools/modeling/plugins/org.opendds.modeling.diagram.datalib/src/org/opendds/modeling/diagram/datalib/part/OpenDDSDataLibDiagramEditor.java:
         * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/src/org/opendds/modeling/diagram/dcpslib/part/OpenDDSDcpsLibDiagramEditor.java:
         * tools/modeling/plugins/org.opendds.modeling.diagram.policylib/src/org/opendds/modeling/diagram/policylib/part/OpenDDSPolicyLibDiagramEditor.java:
 
-	  Auto-generated update based on diagram editor ID change.
+          Auto-generated update based on diagram editor ID change.
 
 Fri Mar 18 14:47:45 UTC 2011  Adam Mitz  <mitza@ociweb.com>
 
